# flagd

./: .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-manifest.json  1  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  benchmark.txt  build.Dockerfile  ca-cert.pem  ca-key.pem  demo-rollout.sh  docker-compose.yaml  e -i 717e0eb22d1f0f3cac0d10f8c233c77f9064785a^  flagd-coverage.out  flagd-proxy-coverage.out  go.mod  go.sum  go.work  go.work.sum  localhost+1-key.pem  localhost+1.pem  main.go  mkdocs.yml  netlify.toml  notes.md  output.txt  profile.Dockerfile  profiler.go  pyproject.toml  release-please-config.json  renovate.json  (+6 more)
.devcontainer/: devcontainer.json
cmd/: provider.go  root.go  server.go  start.go  version.go
config/: open_api_gen_config.yml
core/: CHANGELOG.md  go.mod  go.sum
docs/: README.md  WEB_BUILD_INFO.md  architecture.md  caching.md  configuration.md  configuration.md.orig  deployment.md  evaluation_examples.md  faq.md  flag_configurations.md  fractional_evaluation.md  get_started.md  high_level_architecture.md  http_int_response.md  index.md  installation.md  quick-start.md  reusable_targeting_rules.md  snap.md  systemd-service.md  troubleshooting.md
examples/: example_flags.json
flagd/: CHANGELOG.md  build.Dockerfile  go.mod  go.sum  main.go  profile.Dockerfile  profiler.go
flagd-proxy/: CHANGELOG.md  README.md  build.Dockerfile  go.mod  go.sum  main.go
internal/: go.mod  go.sum
kube-flagd-proxy/: CHANGELOG.md  README.md  (+4 more)
(+628 files in other folders)
