[tool.poetry]
name = "flagd.dev"
version = "0.1.0"
description = "flagd documenation"
authors = ["OpenFeature Maintainers"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.2"
mkdocs-material = "^9.5.3"
pymdown-extensions = "^10.1"
mkdocs-material-extensions = "^1.3"
fontawesome-markdown = "^0.2.6"
pillow = "^10.0.0"
cairosvg = "^2.7.1"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-redirects = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
